gitops-export/ableton-ebs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ableton-ebs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ableton-ebs
  namespace: ableton-ebs
  labels:
    app: ableton-ebs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ableton-ebs
  template:
    metadata:
      labels:
        app: ableton-ebs
    spec:
      containers:
      - name: ebs
        image: ghcr.io/fabian-lindhardt/ableton-ebs:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ableton-ebs
  namespace: ableton-ebs
spec:
  selector:
    app: ableton-ebs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ableton-ebs-ingress
  namespace: ableton-ebs
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - abletonlivechat.flairtec.de
    secretName: ableton-ebs-tls
  rules:
  - host: abletonlivechat.flairtec.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ableton-ebs
            port:
              number: 80
